--- a/ensinofundamental/artes.html
+++ b/ensinofundamental/artes.html
@@ -67,7 +67,7 @@
             <td><a href="./p1f/p987h.pdf">Quinto</a></td>
             <td><a href="./p1f/p9878.pdf">Sexto</a></td>
             <td><a href="./p1f/p987fgd.pdf">Sétimo</a></td>
-            <td><a href="./p1f/p987frtpdf">Oitavo</a></td>
+            <td><a href="./p1f/p987frt.pdf">Oitavo</a></td>
             <td><a href="./p1f/p987fdd2.pdf">Nono</a></td>
         </tr>
     </tbody>
