--- a/ensinofundamental/geografia.html
+++ b/ensinofundamental/geografia.html
@@ -60,15 +60,15 @@
 <table>
     <tbody>
         <tr>
-            <td><a href="./p1f/p3f.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p2fac.pdf">Primeiro</a></td>
+            <td><a href="./p1f/p2av2.pdf">Segundo</a></td>
+            <td><a href="./p1f/p2dd2.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p2dd4.pdf">Quarto</a></td>
+            <td><a href="./p1f/p2dcf2.pdf">Quinto</a></td>
+            <td><a href="./p1f/p2efr2.pdf">Sexto</a></td>
+            <td><a href="./p1f/p245g.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p2efrc.pdf">Oitavo</a></td>
+            <td><a href="./p1f/p2eer.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
