--- a/ensinofundamental/historia.html
+++ b/ensinofundamental/historia.html
@@ -60,15 +60,15 @@
 <table>
     <tbody>
         <tr>
-            <td><a href="./p1f/p69f.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p269f.pdf">Primeiro</a></td>
+            <td><a href="./p1f/p2dv9f.pdf">Segundo</a></td>
+            <td><a href="./p1f/p2dfaf.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p2ecfdf.pdf">Quarto</a></td>
+            <td><a href="./p1f/p2wwx9f.pdf">Quinto</a></td>
+            <td><a href="./p1f/p22fegf.pdf">Sexto</a></td>
+            <td><a href="./p1f/p22d9f.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p26dc9f.pdf">Oitavo</a></td>
+            <td><a href="./p1f/p269fade.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
