--- a/ensinofundamental/linguaportuguesa.html
+++ b/ensinofundamental/linguaportuguesa.html
@@ -61,14 +61,14 @@
     <tbody>
         <tr>
             <td><a href="./p1f/p1f.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p1acd.pdf">Segundo</a></td>
+            <td><a href="./p1f/p1ef.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p1anl2.pdf">Quarto</a></td>
+            <td><a href="./p1f/p1dce.pdf">Quinto</a></td>
+            <td><a href="./p1f/p21cw.pdf">Sexto</a></td>
+            <td><a href="./p1f/p1ecac.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p1anl2.pdf">Oitavo</a></td>
+            <td><a href="./p1f/p1ej4c.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
