--- a/ensinofundamental/matematica.html
+++ b/ensinofundamental/matematica.html
@@ -60,14 +60,14 @@
     <tbody>
         <tr>
             <td><a href="./p1f/p2mf.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p2mfac.pdf">Segundo</a></td>
+            <td><a href="./p1f/p2mf3e.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p2mfew.pdf">Quarto</a></td>
+            <td><a href="./p1f/p2mfdda.pdf">Quinto</a></td>
+            <td><a href="./p1f/p2mf1r3.pdf">Sexto</a></td>
+            <td><a href="./p1f/p2mf2dcs.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p2mf211e.pdf">Oitavo</a></td>
+            <td><a href="./p1f/p2mf23cqqx.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
