--- a/ensinofundamental/ciencias.html
+++ b/ensinofundamental/ciencias.html
@@ -11,15 +11,15 @@
 <table style="border-collapse: collapse; width: 100%;" border="1">
 <tbody>
 <tr>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cf.pdf">Primeiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cg.pdf">Segundo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2ch.pdf">Terceiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2ck.pdf">Quarto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cl.pdf">Quinto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cm.pdf">Sexto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cp.pdf">S&eacute;timo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cr.pdf">Oitavo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cs.pdf">Nono</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cf.pdf">Primeiro</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cg.pdf">Segundo</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2ch.pdf">Terceiro</a></td>
+<td style="width: 11.1111%;"><a href="./p1f//p2ck.pdf">Quarto</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cl.pdf">Quinto</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cm.pdf">Sexto</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cp.pdf">S&eacute;timo</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cr.pdf">Oitavo</a></td>
+<td style="width: 11.1111%;"><a href="./p1f/p2cs.pdf">Nono</a></td>
 </tr>
 </tbody>
 </table>
