--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <iframe id="iframeContent" src="" frameborder="0"></iframe>
+    <iframe id="iframeContent" src="./paginainicial.html" frameborder="0"></iframe>
 
     <footer>
       <p>Feito com auxílio do site: <a href="https://html-online.com/">html-online.com</a></p>
