--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
   </div>
 
   <script>
-    const JSON_URL = 'wzzm.org/json/erro404.json'; // OU 'https://admin.wzzm.org/json/artigos.json'
+    const JSON_URL = 'https://wzzm.org/json/erro404.json'; // OU 'https://admin.wzzm.org/json/artigos.json'
 
     async function loadContent() {
       const contentSectionsDiv = document.getElementById('content-sections');
