--- a/paginainicial.html
+++ b/paginainicial.html
@@ -1,10 +1,31 @@
 <html>
-<p>BEM VINDO AO WZZM ESCOLAR!</p>
-<p><strong>Regras:</strong></p>
-<ul>
-<li>O site &eacute; sem fins lucrativos;</li>
-<li>Todas as mat&eacute;rias s&atilde;o feitas em artigo pr&eacute; definido pela Wiki Zone Zero Mod;</li>
-<li>Os dados s&atilde;o baseados com o aux&iacute;lio do CHATGPT, mas n&atilde;o significa que sejam inv&aacute;lidos;</li>
-<li>Todo o conte&uacute;do pode ser checado.</li>
-</ul>
+<!-- ####### Comments are visible in the source editor ###### -->
+<h3 style="color: #3271a2; font-size: 36px;">ATEN&Ccedil;&Atilde;O, ANTES DE USAR A P&Aacute;GINA!</h3>
+<p>A p&aacute;gina &eacute; ensaios para garantir o conte&uacute;do saud&aacute;vel para estudantes e entusiastas na educa&ccedil;&atilde;o. N&atilde;o se considera informa&ccedil;&otilde;es oficiais.</p>
+<h4></h4>
+<table class="editorDemoTable" style="vertical-align: top;">
+<thead>
+<tr>
+<td>Nomes</td>
+<td style="width: 42%;">Informa&ccedil;&otilde;es</td>
+<td style="width: 42%;">Informa&ccedil;&otilde;es</td>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="min-width: 140px;"><strong>Dados do ensino fundamental</strong></td>
+<td>Usando educa&ccedil;&atilde;o baseadas em contextos saud&aacute;veis, constroi-se a educa&ccedil;&atilde;o ideal.</td>
+<td>Lembrando de que s&atilde;o arquivos testes.</td>
+</tr>
+<tr>
+<td><strong>Ensino M&eacute;dio</strong></td>
+<td style="background-color: rgba(0,0,0,0.1);">
+<p>Usando educa&ccedil;&atilde;o baseadas em contextos saud&aacute;veis, constroi-se a educa&ccedil;&atilde;o ideal.</p>
+</td>
+<td>Lembrando de que s&atilde;o arquivos testes. Adicionar informa&ccedil;&otilde;es s&atilde;o graduais, e podem ser flexiveis.</td>
+</tr>
+</tbody>
+</table>
+<hr />
+<p></p>
 </html>
