--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <footer>
       <p>Feito com auxílio do site: <a href="https://html-online.com/">html-online.com</a></p>
       <p>Editor: Collei "Grigori" Ludwig</p>
-<p style="text-align: center;">Site administrador pela <a href="wzzm.org">Wiki Zone Zero Mod</a></p>
+<p style="text-align: center;">Site administrador pela <a href="http://wzzm.org">Wiki Zone Zero Mod</a></p>
 <p style="text-align: center;">&nbsp;</p>
     </footer>
   </div>
