--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button onclick="loadContent('ensinofundamental/geografia.html')">Geografia</button>
         <button onclick="loadContent('ensinofundamental/artes.html')">Artes</button>
         <button onclick="loadContent('ensinofundamental/educacaofisica.html')">Educação Física</button>
+        <button onclick="loadContent('ensinofundamental/avancado.html')">Avançado</button>
       </div>
     </div>
 
