--- a/ensinofundamental/avancado.html
+++ b/ensinofundamental/avancado.html
@@ -23,7 +23,7 @@
   </div>
 
   <script>
-    const JSON_URL = '../json/artigosdoensinofundamental.json'; // OU 'https://admin.wzzm.org/json/artigos.json'
+    const JSON_URL = 'https://escolar.wzzm.org/ensinofundamental/artigos.json'; // OU 'https://admin.wzzm.org/json/artigos.json'
 
     async function loadContent() {
       const contentSectionsDiv = document.getElementById('content-sections');
