--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>ERRO 404! </title>
+  <title>ERRO 404: Página Não Encontrada</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -10,85 +10,130 @@
     body {
       font-family: 'Inter', sans-serif;
     }
+    /* Estilos básicos para o conteúdo da página 404 */
+    .content-area p {
+      margin-bottom: 1rem;
+      text-align: justify;
+    }
+    .content-area h3 {
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      text-align: justify;
+    }
+    .content-area ul, .content-area ol {
+      list-style-type: disc;
+      margin-left: 1.5rem;
+      margin-bottom: 1rem;
+      text-align: justify;
+    }
+    .content-area ol {
+      list-style-type: decimal;
+    }
+    .content-area li {
+      margin-bottom: 0.5rem;
+    }
+    .content-area strong {
+        font-weight: 600; /* Tailwind font-semibold */
+    }
+    .content-area code {
+        background-color: #e2e8f0; /* bg-gray-200 */
+        padding: 0.2rem 0.4rem;
+        border-radius: 0.25rem;
+        font-family: 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace;
+        font-size: 0.875em;
+    }
   </style>
 </head>
 <body class="bg-gray-100 min-h-screen py-8">
   <div class="max-w-6xl mx-auto px-4">
-    <h1 class="text-2xl font-semibold text-center text-gray-800 mb-8">Leia o conteúdo com atenção!</h1>
+    <h1 style="color: #ff0000; text-align: center;" class="text-4xl font-bold mb-8">Atenção: A página solicitada não existe.</h1>
 
-    <div id="content-sections">
-      <p>Carregando conteúdo...</p>
+    <div class="bg-white rounded-lg shadow-md p-6 content-area">
+      <p>O erro <strong>404 Not Found</strong> (Página Não Encontrada) é, sem dúvida, um dos códigos de status HTTP mais comuns e reconhecíveis que os usuários da internet encontram. Ele faz parte da classe de erros <strong>4xx (Erros do Cliente)</strong>, o que significa que o problema é percebido como sendo do lado do navegador ou da solicitação feita pelo usuário, e não do servidor em si.</p>
+
+      <h3>O que significa?</h3>
+      <p>Quando você tenta acessar uma página da web, seu navegador envia uma solicita&ccedil;&atilde;o a um servidor. O erro 404 ocorre quando:</p>
+      <ol>
+        <li><strong>O navegador consegue se conectar ao servidor.</strong> Isso &eacute; importante: o servidor est&aacute; funcionando e acess&iacute;vel.</li>
+        <li><strong>O servidor, no entanto, n&atilde;o consegue encontrar o recurso (p&aacute;gina, imagem, arquivo) solicitado pelo navegador.</strong></li>
+      </ol>
+      <p>Em outras palavras, o servidor est&aacute; "online" e respondendo, mas ele n&atilde;o tem o que voc&ecirc; est&aacute; procurando no endere&ccedil;o que voc&ecirc; forneceu.</p>
+
+      <h3>Causas Comuns do Erro 404</h3>
+      <ul>
+        <li><strong>URL incorreta (erro de digita&ccedil;&atilde;o):</strong> Esta &eacute; a causa mais frequente. O usu&aacute;rio digitou o endere&ccedil;o da web (URL) errado na barra de endere&ccedil;os do navegador.</li>
+        <li><strong>P&aacute;gina movida ou deletada:</strong> O conte&uacute;do da p&aacute;gina que voc&ecirc; est&aacute; tentando acessar foi removido do servidor ou teve seu endere&ccedil;o (URL) alterado, e n&atilde;o h&aacute; um redirecionamento configurado para o novo local.</li>
+        <li><strong>Link quebrado ou "morto":</strong> Um link em outro site, ou at&eacute; mesmo dentro do pr&oacute;prio site, aponta para uma p&aacute;gina que n&atilde;o existe mais ou cuja URL mudou.</li>
+        <li><strong>Problemas de DNS:</strong> Em alguns casos, configura&ccedil;&otilde;es incorretas do DNS podem levar o navegador a procurar a p&aacute;gina no lugar errado, resultando em um 404.</li>
+        <li><strong>Erro de cache do navegador:</strong> Seu navegador pode ter armazenado uma vers&atilde;o antiga da p&aacute;gina no cache que agora n&atilde;o existe mais.</li>
+        <li><strong>Problemas com o arquivo .htaccess:</strong> Em servidores Apache, um arquivo <code>.htaccess</code> mal configurado pode causar redirecionamentos incorretos ou impedir o acesso a certos arquivos, resultando em 404s.</li>
+        <li><strong>Arquivo ausente:</strong> Pode ser que um arquivo essencial para a p&aacute;gina (como uma imagem, um arquivo CSS ou JavaScript) n&atilde;o esteja mais dispon&iacute;vel no servidor, gerando um 404 para aquele recurso espec&iacute;fico, mesmo que a p&aacute;gina principal carregue parcialmente.</li>
+        <li><strong>V&iacute;rus ou malware:</strong> Embora menos comum, softwares maliciosos podem interferir na navega&ccedil;&atilde;o, causando redirecionamentos para p&aacute;ginas inexistentes ou impedindo o acesso correto.</li>
+      </ul>
+
+      <h3>O que acontece quando um 404 ocorre?</h3>
+      <p>Geralmente, o navegador exibe uma mensagem de erro indicando que a p&aacute;gina n&atilde;o foi encontrada. Muitos sites personalizam suas p&aacute;ginas de erro 404 para torn&aacute;-las mais amig&aacute;veis, com um design que combina com o restante do site e, muitas vezes, oferecendo op&ccedil;&otilde;es como um campo de busca, links para a p&aacute;gina inicial ou outras se&ccedil;&otilde;es populares, ou at&eacute; mesmo um toque de humor para tentar diminuir a frustra&ccedil;&atilde;o do usu&aacute;rio.</p>
+
+      <h3>Impacto e Solu&ccedil;&otilde;es</h3>
+      <p>Para usu&aacute;rios:</p>
+      <ul>
+        <li><strong>Verifique a URL:</strong> A primeira coisa a fazer &eacute; revisar se voc&ecirc; digitou o endere&ccedil;o corretamente.</li>
+        <li><strong>Atualize a p&aacute;gina:</strong> &Agrave;s vezes, &eacute; um erro tempor&aacute;rio de carregamento.</li>
+        <li><strong>Limpe o cache e os cookies do navegador:</strong> Isso pode resolver problemas de p&aacute;ginas em cache.</li>
+        <li><strong>Tente novamente mais tarde:</strong> O site pode estar passando por manuten&ccedil;&atilde;o ou instabilidade tempor&aacute;ria.</li>
+        <li><strong>Use um mecanismo de busca:</strong> Tente pesquisar o conte&uacute;do desejado no Google ou em outro motor de busca.</li>
+      </ul>
+      <p>Para propriet&aacute;rios de sites:</p>
+      <ul>
+        <li><strong>Redirecionamentos 301:</strong> Se uma p&aacute;gina foi movida permanentemente, implemente um redirecionamento 301 (Moved Permanently) do URL antigo para o novo. Isso &eacute; crucial para a experi&ecirc;ncia do usu&aacute;rio e para o SEO.</li>
+        <li><strong>Verifique links quebrados:</strong> Utilize ferramentas para identificar e corrigir links internos e externos que apontam para p&aacute;ginas inexistentes.</li>
+        <li><strong>P&aacute;ginas 404 personalizadas:</strong> Crie uma p&aacute;gina 404 amig&aacute;vel e &uacute;til para guiar os usu&aacute;rios de volta ao seu site.</li>
+        <li><strong>Monitore erros 404:</strong> Use ferramentas de an&aacute;lise de web (como Google Search Console) para identificar quais URLs est&atilde;o gerando erros 404 no seu site, o que pode indicar problemas a serem corrigidos.</li>
+      </ul>
+
+      <p>Esses c&oacute;digos s&atilde;o agrupados em classes:</p>
+      <ul>
+        <li><strong>1xx (Informativas):</strong> Indicam que a solicita&ccedil;&atilde;o foi recebida e o processo continua.</li>
+        <li><strong>2xx (Sucesso):</strong> A a&ccedil;&atilde;o foi recebida, compreendida e aceita com sucesso.</li>
+        <li><strong>3xx (Redirecionamento):</strong> O cliente precisa tomar alguma a&ccedil;&atilde;o adicional para completar a solicita&ccedil;&atilde;o.</li>
+        <li><strong>4xx (Erros do Cliente):</strong> Indicam que a solicita&ccedil;&atilde;o cont&eacute;m sintaxe incorreta ou n&atilde;o pode ser atendida, sendo o erro do lado do cliente.</li>
+        <li><strong>5xx (Erros do Servidor):</strong> Indicam que o servidor falhou ao cumprir uma solicita&ccedil;&atilde;o aparentemente v&aacute;lida.</li>
+      </ul>
+      <p>Aqui est&atilde;o alguns dos erros mais comuns, al&eacute;m do 404:</p>
+      <p><strong>Erros do Cliente (4xx):</strong></p>
+      <ul>
+        <li><strong>400 Bad Request (Requisi&ccedil;&atilde;o Inv&aacute;lida):</strong> O servidor n&atilde;o consegue processar a solicita&ccedil;&atilde;o devido a um erro percebido do cliente (por exemplo, sintaxe da solicita&ccedil;&atilde;o malformada, enquadramento de mensagem de solicita&ccedil;&atilde;o inv&aacute;lida).</li>
+        <li><strong>401 Unauthorized (N&atilde;o Autorizado):</strong> O cliente n&atilde;o tem credenciais de autentica&ccedil;&atilde;o v&aacute;lidas para o recurso solicitado. O servidor pode responder com este erro se o usu&aacute;rio tentar acessar uma p&aacute;gina que exige login e n&atilde;o est&aacute; logado.</li>
+        <li><strong>403 Forbidden (Proibido):</strong> O cliente n&atilde;o tem permiss&atilde;o de acesso ao conte&uacute;do. Ao contr&aacute;rio do 401, a identidade do cliente &eacute; conhecida pelo servidor, mas ele se recusa a fornecer o recurso solicitado (por exemplo, tentativa de acessar uma pasta restrita).</li>
+        <li><strong>405 Method Not Allowed (M&eacute;todo N&atilde;o Permitido):</strong> O m&eacute;todo HTTP usado na solicita&ccedil;&atilde;o (GET, POST, PUT, DELETE, etc.) n&atilde;o &eacute; permitido para o recurso identificado pela URL.</li>
+        <li><strong>408 Request Timeout (Tempo Limite da Requisi&ccedil;&atilde;o):</strong> O servidor esgotou o tempo de espera pela requisi&ccedil;&atilde;o completa do cliente.</li>
+        <li><strong>409 Conflict (Conflito):</strong> A requisi&ccedil;&atilde;o n&atilde;o p&ocirc;de ser completada devido a um conflito com o estado atual do recurso (por exemplo, tentar atualizar um arquivo que foi modificado por outra pessoa).</li>
+        <li><strong>410 Gone (Recurso Removido):</strong> Indica que o recurso solicitado n&atilde;o est&aacute; mais dispon&iacute;vel no servidor e que essa condi&ccedil;&atilde;o provavelmente &eacute; permanente. &Eacute; semelhante ao 404, mas com a indica&ccedil;&atilde;o de que o recurso foi intencionalmente removido.</li>
+        <li><strong>413 Payload Too Large (Carga &Uacute;til Muito Grande):</strong> A requisi&ccedil;&atilde;o do cliente &eacute; maior do que o servidor est&aacute; disposto ou consegue processar.</li>
+        <li><strong>414 URI Too Long (URI Muito Longa):</strong> A URI (Uniform Resource Identifier) solicitada pelo cliente &eacute; muito longa para o servidor processar.</li>
+        <li><strong>415 Unsupported Media Type (Tipo de M&iacute;dia N&atilde;o Suportado):</strong> O servidor n&atilde;o suporta o formato da m&iacute;dia da requisi&ccedil;&atilde;o.</li>
+        <li><strong>429 Too Many Requests (Muitas Requisi&ccedil;&otilde;es):</strong> O cliente enviou muitas requisi&ccedil;&otilde;es em um determinado per&iacute;odo de tempo (limita&ccedil;&atilde;o de taxa).</li>
+      </ul>
+      <p><strong>Erros do Servidor (5xx):</strong></p>
+      <ul>
+        <li><strong>500 Internal Server Error (Erro Interno do Servidor):</strong> Um erro gen&eacute;rico que indica que o servidor encontrou uma condi&ccedil;&atilde;o inesperada que o impediu de atender &agrave; solicita&ccedil;&atilde;o. &Eacute; um dos erros mais comuns do lado do servidor e pode ter v&aacute;rias causas (erros de c&oacute;digo, configura&ccedil;&atilde;o incorreta, etc.).</li>
+        <li><strong>501 Not Implemented (N&atilde;o Implementado):</strong> O servidor n&atilde;o suporta a funcionalidade necess&aacute;ria para atender &agrave; solicita&ccedil;&atilde;o.</li>
+        <li><strong>502 Bad Gateway (Gateway Inv&aacute;lido):</strong> O servidor, ao atuar como um gateway ou proxy, recebeu uma resposta inv&aacute;lida do servidor upstream.</li>
+        <li><strong>503 Service Unavailable (Servi&ccedil;o Indispon&iacute;vel):</strong> O servidor n&atilde;o est&aacute; apto a lidar com a solicita&ccedil;&atilde;o no momento, geralmente devido a sobrecarga ou manuten&ccedil;&atilde;o do servidor. &Eacute; tempor&aacute;rio.</li>
+        <li><strong>504 Gateway Timeout (Tempo Limite do Gateway):</strong> O servidor, ao atuar como um gateway ou proxy, n&atilde;o recebeu uma resposta a tempo do servidor upstream.</li>
+        <li><strong>505 HTTP Version Not Supported (Vers&atilde;o HTTP N&atilde;o Suportada):</strong> O servidor n&atilde;o suporta a vers&atilde;o do protocolo HTTP usada na requisi&ccedil;&atilde;o.</li>
+      </ul>
+      <p>Al&eacute;m dos c&oacute;digos HTTP, podem ocorrer outros tipos de erros no navegador, como:</p>
+      <ul>
+        <li><strong>Erros de Conex&atilde;o de Rede:</strong> O navegador n&atilde;o consegue estabelecer uma conex&atilde;o com o servidor. Isso pode ser devido a problemas com a internet do usu&aacute;rio, firewall, ou o servidor estar offline.</li>
+        <li><strong>Erros de DNS:</strong> O navegador n&atilde;o consegue resolver o nome do dom&iacute;nio (URL) em um endere&ccedil;o IP. Isso pode ser causado por problemas com o provedor de DNS do usu&aacute;rio ou com o servidor DNS do site.</li>
+        <li><strong>Erros de Certificado SSL/TLS:</strong> Quando o navegador detecta um problema com o certificado de seguran&ccedil;a do site (HTTPS), como um certificado expirado ou inv&aacute;lido.</li>
+        <li><strong>Conte&uacute;do Misto (Mixed Content):</strong> Ocorre quando uma p&aacute;gina HTTPS tenta carregar recursos (imagens, scripts, CSS) de fontes HTTP, o que pode gerar avisos de seguran&ccedil;a no navegador.</li>
+        <li><strong>Erros de JavaScript:</strong> Falhas na execu&ccedil;&atilde;o de scripts JavaScript podem impedir o carregamento correto da p&aacute;gina ou de funcionalidades interativas.</li>
+        <li><strong>Erros de Carregamento de Recurso (Imagens, CSS, etc.):</strong> Um arquivo de imagem, folha de estilo (CSS) ou script n&atilde;o p&ocirc;de ser carregado, resultando em um layout quebrado ou funcionalidades ausentes.</li>
+      </ul>
+      <p>Entre em contato com a WZZM para solicitar informa&ccedil;&otilde;es sobre este erro. O e-mail de contato &eacute; nukephoenixdeveloper@gmail.com</p>
     </div>
-
   </div>
-
-  <script>
-    const JSON_URL = 'https://wzzm.org/json/erro404.json'; // OU 'https://admin.wzzm.org/json/artigos.json'
-
-    async function loadContent() {
-      const contentSectionsDiv = document.getElementById('content-sections');
-      contentSectionsDiv.innerHTML = '<p>Carregando conteúdo...</p>';
-
-      // Se não há controle de acesso, userRole e filtragem são simplificados ou removidos.
-      const userRole = 'publico'; // Assumimos que tudo é público ou não há usuários logados
-
-      try {
-        const response = await fetch(JSON_URL);
-        if (!response.ok) {
-          throw new Error(`Erro HTTP! status: ${response.status} - Verifique a URL e as permissões de CORS.`);
-        }
-        const data = await response.json();
-
-        const materias = Object.values(data.materias);
-
-        // Se todo o conteúdo é público, esta filtragem é redundante, mas não faz mal.
-        // Se você tiver certeza que NUNCA terá 'acesso: "admin"' no JSON, pode remover o .filter()
-        const filteredMaterias = materias.filter(materia => {
-            return !(materia.acesso === 'admin' && userRole !== 'admin');
-        });
-
-        const categorias = {};
-        filteredMaterias.forEach(materia => {
-          if (!categorias[materia.categoria]) {
-            categorias[materia.categoria] = [];
-          }
-          categorias[materia.categoria].push(materia);
-        });
-
-        contentSectionsDiv.innerHTML = '';
-
-        for (const categoria in categorias) {
-          const section = document.createElement('section');
-          section.className = 'mb-10';
-          section.innerHTML = `
-            <h2 class="text-xl font-semibold text-gray-700 mb-4 border-b pb-2">${categoria}</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4" id="${categoria.replace(/\s+/g, '-').toLowerCase()}-container">
-            </div>
-          `;
-          contentSectionsDiv.appendChild(section);
-
-          const container = section.querySelector(`#${categoria.replace(/\s+/g, '-').toLowerCase()}-container`);
-
-          categorias[categoria].forEach(materia => {
-            const div = document.createElement('div');
-            div.className = 'bg-white rounded-lg shadow p-4';
-            div.innerHTML = `
-              <h3 class="font-semibold text-gray-800">${materia.titulo}</h3>
-              <p class="text-sm text-gray-600 mt-1">${materia.descricao}</p>
-              <a href="${materia.link}" class="text-blue-600 text-sm font-semibold hover:underline mt-2 inline-block">Ver mais</a>
-            `;
-            container.appendChild(div);
-          });
-        }
-
-      } catch (error) {
-        console.error("Erro ao carregar conteúdo:", error);
-        contentSectionsDiv.innerHTML = `<p class="text-red-500">Erro ao carregar o conteúdo: ${error.message}.</p>`;
-      }
-    }
-
-    // Chama a função para carregar o conteúdo uma vez quando a página carregar.
-    window.addEventListener('load', loadContent);
-  </script>
 </body>
 </html>
